fix(ui5-datetime-picker): aligning the focus borders (#4250)

--- a/packages/main/src/themes/DateTimePickerPopover.css
+++ b/packages/main/src/themes/DateTimePickerPopover.css
@@ -59,7 +59,7 @@
 }
 
 #ok.ui5-dt-picker-action {
-	padding: 0 0.5625rem;
+	width: 4rem;
 }
 
 /* Phone mode */
